# plume

./: .gitignore  GALLERY.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/skills/plume/: SKILL.md
.claude/skills/plume/references/: pdf-coordinate-guide.md
.github/workflows/: test.yml
assets/: demo_foersom_spec.json  demo_schengen_spec.json  demo_w9_spec.json
memory/: user-info.json
scripts/: capture_signature.py  detect_fields.py  extract.py  fill.py  generate_gallery.py  generate_gallery_acroform.py  generate_gallery_graphical.py  ml_detect.py  verify.py
tests/: conftest.py  test_detect_fields.py  test_extract.py  test_fill.py  test_verify.py
tests/fill_specs/: au_incoming_passenger_graphical.json  ca_td1_graphical.json  de_en_schengen_visa_graphical.json  de_kindergeld_acroform.json  es_modelo_030_acroform.json  es_schengen_visa_graphical.json  eu_schengen_visa_graphical.json  fr_long_stay_visa_graphical.json  fr_schengen_visa_graphical.json  it_schengen_visa_graphical.json  jp_customs_declaration_graphical.json  pt_national_visa_graphical.json  sample_foersom_acroform.json  uk_n285_court_acroform.json  us_i9_acroform.json  us_sf86_security_acroform.json  us_w4_acroform.json  us_w9_acroform.json
tests/fixtures/: MANIFEST.json
