[project]
name = "plume"
version = "0.1.0"
description = "Fill any PDF form with a single command — a Claude Code skill"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0.0",
    "reportlab>=4.0.0",
    "cryptography>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.44.0,<5.0.0",
    "accelerate>=0.25.0",
    "doclayout-yolo>=0.0.4",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "ultralytics>=8.3.0",
]
